[package]
name = "bevy_utils"
version = "0.5.0"
edition = "2018"
authors = [
    "Bevy Contributors <bevyengine@gmail.com>",
    "Carter Anderson <mcanders1@gmail.com>",
]
description = "A collection of utils for Bevy Engine"
homepage = "https://bevyengine.org"
repository = "https://github.com/bevyengine/bevy"
license = "MIT"
keywords = ["bevy"]

[dependencies]
ahash = "0.7.0"
tracing = {version = "0.1", features = ["release_max_level_info"]}
uuid = { version = "0.8", features = ["v4", "serde"] }

[target.'cfg(all(target_arch = "wasm32", not(target_os = "emscripten")))'.dependencies]
instant = { version = "0.1", features = ["wasm-bindgen"] }
getrandom = {version = "0.2.0", features = ["js"]}
uuid = { version = "0.8", features = ["wasm-bindgen"] }
